# wake

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  MANIFEST.in  README.md  conftest.py  init.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  wake.example.json  wake.sublime-project
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  release.yml  style.yml  tests.yml
tests/: test_cli.py  test_wake.py
wake/: __init__.py  cli.py  core.py  log.py  wake.py
